<resources>
    <string name="app_name">MediPal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_enable_help">Enable Help Screens</string>
    <string name="action_about">About</string>

    <!-- Personal Bio -->
    <string name="title_activity_add_personalBio">Personal Details</string>
    <string name="fullName">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="idNo">Passport/ NRIC No.</string>
    <string name="buildingName">Building Name</string>
    <string name="location">Location</string>
    <string name="streetName">Street Name</string>
    <string name="level">Level</string>
    <string name="unitNo">Unit</string>
    <string name="postalCode">Postal Code</string>
    <string name="height">Height (in cm)</string>
    <string name="bloodType">Blood Group</string>
    <string name="personalBio">Personal Bio</string>
    <string name="save">Save</string>
    <string-array name="blood_type_list">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="categoryName">Name</string>
    <string name="categoryCode">Code</string>
    <string name="categoryDescription">Description</string>
    <string name="categoryReminder">Reminder</string>
    <string name="medicineName">Name</string>
    <string name="medicineDescription">Description</string>
    <string name="medicineCategory">Category</string>
    <string name="medicineReminder">Reminder</string>
    <string name="medicineQuantity">Quantity</string>
    <string name="medicineDosage">Dosage</string>
    <string name="medicineConsumeQuantity">Consume Quantity</string>
    <string name="medicineThreshold">Threshold</string>
    <string name="medicineDateIssued">Date Issued</string>
    <string name="medicineExpireFactor">ExpireFactor (months)</string>
    <string name="update">Update</string>

    <!-- Reminder  -->
    <string name="reminderFrequency">Frequency</string>
    <string name="reminderStartTime">StartTime</string>
    <string name="reminderInterval">Interval (minutes)</string>

    <!-- Measurement -->
    <string name="measurement_fragment">Measurement Fragment</string>
    <string name="title_activity_add_measurement">AddMeasurement</string>
    <string name="title_activity_display_measurement">DisplayMeasurement</string>
    <string name="measured_on">Measured on:</string>
    <string name="systolic"> Systolic (mm Hg)</string>
    <string name="diastolic"> Diastolic (mm Hg)</string>
    <string name="pulse"> Pulse (bpm)</string>
    <string name="temperature"> Temperature (Degree Celcius)</string>
    <string name="weight"> Weight (Kg)</string>

    <!-- ICE ICEContactsManager  -->
    <string name="ice_header">In case of emergency</string>
    <string name="description">Description</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="ice_spinner_header">Type of contact</string>

    <!-- Health Bio -->
    <string name="condition">Condition</string>
    <string name="startDate">Diagnosed on</string>
    <string name="conditionType">Condition Type</string>
    <string name="add_another">Add another medical condition</string>
    <string name="conditionTypeAllergy">Allergy</string>
    <string name="tagAllergy">A</string>
    <string name="tagCondition">C</string>

    <!-- Error/Warning Messages -->
    <string name="warning_allMandatory">All fields are mandatory!</string>
    <string name="warning_atleastOne">Please provide value for atleast one field!</string>
    <string name="warning_delete">Are you sure you want to delete?</string>
    <string name="warning_exit">Are you sure you want to exit?</string>
    <string name="insert_error">Details were not inserted properly. Please try again later.</string>
    <string name="update_error">Details were not updated properly. Please try again later.</string>

    <!-- Success Messages -->
    <string name="add_success">Details added successfully!</string>
    <string name="update_success">Details updated successfully!</string>
    <string name="delete_success">Deleted!</string>


    <!-- Date picker -->
    <string name="datePickerTitle">Set Date</string>
    <string name="setBtn">Set</string>
    <string name="consumptionMedicince">Medicine</string>
    <string name="consumptionDate">Date</string>
    <string name="consumptionTime">Time</string>
    <string name="consumptionQuantity">Quantity</string>
    <string name="consumptionMedicine">Medicine</string>
    <string name="consumedOn">Consumed on</string>
    <string name="consumptionFilterBy">Filter</string>

    <!-- Help -->
    <string name="faq">FAQ</string>
    <string name="question1">Q:What is the purpose of this application?</string>
    <string name="answer1">A:This application is for anyone in need of tracking their medical data.</string>
    <string name="question2">Q:What is the purpose of the measurement screen?</string>
    <string name="answer2">A:The measurement screen helps keep track of your Blood Pressure, Pulse, Temperature and Weight based on date of measurement.</string>
    <string name="question3">Q:What is the purpose of the category screen?</string>
    <string name="answer3">A:The category screen gives the details of all the medicine categories</string>
    <string name="question4">Q:What is the purpose of the medicine screen?</string>
    <string name="answer4">A:The medicine screen helps keep track of medicine details like reminder, quantity, expiry, etc.</string>
    <string name="question5">Q:What is the purpose of the appointment screen?</string>
    <string name="answer5">A:The appointment screen helps keep track of medical appointments for which a reminder is set.</string>
    <string name="question6">Q:What is the purpose of the Emergency Contacts screen?</string>
    <string name="answer6">A:The Emergency Contacts screen has a list of people to be contacted in case of any medical emergency.</string>
    <string name="question7">Q:What is the purpose of the consumption screen?</string>
    <string name="answer7">A:The consumption screen helps keep track of medicines consumed by the user.</string>
    <string name="question8">Q:What is the purpose of the Health Conditions screen?</string>
    <string name="answer8">A:The Health Conditions screen keeps track of user\'s medical conditions</string>
    <string name="question9">Q:What is the purpose of the Personal Details screen?</string>
    <string name="answer9">A:The Personal Details screen keeps track of user\'s personal details</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Categories Screen</string>
    <string name="slide_1_desc">Here you can view and edit the category of medicine</string>

    <string name="slide_2_title">Medicines Screen</string>
    <string name="slide_2_desc">Keep track of your medicine stock and reminders</string>

    <string name="slide_3_title">Emergency Contacts Screen</string>
    <string name="slide_3_desc">Keep track of people to be contacted in case of an emergency. Names can be dragged up or down to change the priority</string>

    <string name="slide_4_title">Health Conditions Screen</string>
    <string name="slide_4_desc">Keep track of your medical conditions</string>

    <string name="slide_5_title">Measurements Screen</string>
    <string name="slide_5_desc">Keep track of your measurements</string>

    <string name="slide_6_title">Appointments Screen</string>
    <string name="slide_6_desc">Keeps tack and reminds you about future appointments</string>

    <string name="slide_7_title">Disable this?</string>
    <string name="slide_7_desc">Un-check the Enable Help Screens option from the options menu</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string-array name="filterBy">
        <item>Choose</item>
        <item>Year</item>
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
    </string-array>
    <string name="ice_name_header">Name</string>
    <string name="ice_description_header">Description</string>
    <string name="ice_phone_header">Phone</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="edit">Edit</string>

    <!-- Strings for empty pages-->
    <string name="noHealthbio">No Health details added!</string>
    <string name="noAppointments">No Appointments added!</string>
    <string name="noConsumption">No Consumptions added!</string>
    <string name="noMedicine">No Medicines added!</string>
    <string name="noMeasurement">No Measurements added!</string>

    <!-- Nav drawer icons -->
    <string name="homeIcon">Home</string>
    <string name="healthbioIcon">Health Conditions</string>
    <string name="measurementIcon">Measurements</string>
    <string name="appointmentIcon">Appointments</string>
    <string name="comsumptionIcon">Consumptions</string>
    <string name="medicineIcon">Medicines</string>
    <string name="categoryIcon">Categories</string>
    <string name="iceIcon">Emergency Contacts</string>
    <string name="reportIcon">Report</string>
    <string name="helpIcon">Help</string>
    <string name="exitIcon">Exit</string>

    <!-- About page -->
    <string name="aboutApp">\"The MediPal Application helps you track and record your health statistics and manage medications.\"</string>
    <string name="createdBy">Credits: <b>Team FT05</b></string>
    <string name="aakash">Aakash Deep Mangalore</string>
    <string name="abinaya">Abinaya Devrasu</string>
    <string name="ashish">Ashish Shrikant Katre</string>
    <string name="dhruv">Dhruv Madan Gopal</string>
    <string name="ethiraj">Ethiraj Srinivasan</string>
    <string name="moushumi">Moushumi Seal</string>
    <string name="sos">SOS</string>

</resources>
