<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        tools:context="com.ethigeek.medtracker.fragments.AboutFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_weight="5.29"
            android:paddingTop="30dp"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/tv_medtracker"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal"
            android:includeFontPadding="false"
            android:paddingBottom="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.49"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/aboutApp"
            android:textSize="20dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_createdBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/createdBy"
            android:textSize="19dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_aakash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/aakash"
            android:textSize="15dp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/tv_abinaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/abinaya"
            android:textSize="15dp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/tv_ashish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/ashish"
            android:textSize="15dp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/tv_dhruv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/dhruv"
            android:textSize="15dp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/tv_ethiraj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/ethiraj"
            android:textSize="15dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_moushumi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/moushumi"
            android:textSize="15dp"
            android:textStyle="italic" />


    </LinearLayout>
</ScrollView>