<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">
            <TextView
                android:id="@+id/medicineLabelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicineName"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/medinceLabelDescription"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@string/medicineDescription"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicineDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/medicineLabelCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/medicineCategory"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/medicineCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"                />

            <TextView
                android:id="@+id/medicineLabelReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicineReminder"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/medicineReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/medicineLabelQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/medicineQuantity"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicineQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/medicineLabelDosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/medicineDosage"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/medicineDosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/medicineLabelConsumeQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:text="@string/medicineConsumeQuantity"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicineConsumeQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
               />

            <TextView
                android:id="@+id/medicineLabelThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/medicineThreshold"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicineThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
               />

            <TextView
                android:id="@+id/medicineLabelDateIssued"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/medicineDateIssued"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicineDateIssued"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/medicineLabelExpireFactor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/medicineExpireFactor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicineExpireFactor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
               />

            <TextView
                android:id="@+id/reminderLabelFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reminderFrequency"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reminderFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
/>
            <TextView
                android:id="@+id/reminderLabelStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reminderStartTime"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reminderStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
/>
            <TextView
                android:id="@+id/reminderLabelInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reminderInterval"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reminderInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"

                />


</LinearLayout>
    </ScrollView>